# inn

./: Cargo.toml
src/: lib.rs
src/adapter/: web.rs
src/adapter/inn/: owner.rs
src/adapter/inn/owner/: controller.rs
src/adapter/inn/owner/present/: cli.rs
src/adapter/web/: presenter.rs
src/adapter/web/handlers/: create_owner.rs
src/application/: inn.rs  mod.rs  owner.rs
src/application/inn/: owner.rs  service.rs
src/application/inn/owner/: repository.rs  rules.rs
src/application/inn/owner/rules/: owner_name_must_be_unique.rs
src/application/inn/owner/use_cases/: create_owner.rs
src/application/owner/: repository.rs
src/application/owner/rules/: owner_name_must_be_unique.rs
src/application/owner/use_cases/: create_owner.rs
src/application/shared/: use_case.rs
src/domain/: mod.rs  owner.rs
src/domain/owner/: rules.rs
src/domain/owner/rules/: owner_name_cannot_be_empty.rs
src/domain/shared/: error.rs  mod.rs  rule.rs
src/infrastructure/persistence/: in_memory.rs  sqlite.rs
src/interface/: inn.rs  web.rs
src/interface/inn/: owner.rs  service.rs
src/interface/inn/owner/: controller.rs  present.rs
src/interface/inn/owner/present/: cli.rs
src/interface/shared/: present.rs
src/interface/web/: handlers.rs
src/user_interface/: inn.rs  mod.rs  web.rs
src/user_interface/inn/owner/: controller.rs
src/user_interface/shared/: mod.rs  present.rs
src/user_interface/shared/present/: cli.rs
