[package]
name = "inn"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "inn"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
mockall = "0.13.1"
thiserror = "2.0.9"
uuid = { version = "1.11.0", features = ["v7"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
